integration back-front 20%